# 42sh

./: .42shrc  42sh  CMakeLists.txt  Makefile  Makefile.orig  README.md  alib  author  dlib  file  ft_strcut.c  leaks.txt  log.test  log_test  logs  print_args  print_args.c  regex.c  test.sh
braces/: fill_buf.c  ft_strcut.c  get_seq.c  main.c  regex.c
braces/tests/: brace_output.sh  brace_tests.sh  test_script.sh
inc/: ft_expansions.h  ft_readline.h  ft_readline.h.orig  ft_sh.h  ft_sh.h.orig  twenty_one_sh.h
libft/: Makefile  author
libft.old/: Makefile  Makefile~
libft.old/includes/: get_next_line.h  libftprintf.h
libft.old/source/: ft_isalnum.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_lstmap.c  ft_lstpushback.c  ft_memccpy.c  ft_memchr.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_realloc.c  ft_strcat.c  ft_strdel.c  ft_striter.c  ft_striteri.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strstr.c  ft_strsub.c  ft_tolower.c
libft.old/source/printf_tools/: ft_tp_chars.c
libft/inc/: ft_printf.h  libft.h
libft/includes/: libft.h
libft/source/: ft_atoi.c  ft_bzero.c  ft_dprintf.c  ft_free_arr.c  ft_isalpha.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstnew.c  ft_lstprint.c  ft_lstsize.c  ft_lstsort.c  ft_memalloc.c  ft_memcmp.c  ft_memdel.c  ft_printf.c  ft_putnbr.c  ft_putstr.c  ft_putstr_fd.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdup.c  ft_strequ.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strmap.c  ft_strncat.c  ft_strncpy.c  ft_strnequ.c  ft_strnew.c  ft_strrchr.c  ft_strsplit.c  ft_strtrim.c  ft_toupper.c  get_next_line.c
libft/source/printf_tools/: ft_tp_date.c  ft_tp_lenth.c  ft_tp_non_printable.c  ft_tp_print_binry.c  ft_tp_put.c  ft_tp_sci_exp.c  ft_tp_sci_flo.c  ft_tp_science.c  ft_tp_set.c  ft_tp_signed.c  ft_tp_unsigned.c
libft/src/: ft_absolute.c  ft_arrstr.c  ft_atoi.c  ft_atoi_base.c  ft_atol.c  ft_atol_base.c  ft_bzero.c  ft_count_digits.c  ft_dtoa.c  ft_dtoea.c  ft_free_arr.c  ft_is_blank.c  ft_isalnum.c  ft_isalnum_str.c  ft_isalpha.c  ft_isalpha_str.c  ft_isascii.c  ft_isascii_str.c  ft_isblank.c  ft_iscntrl.c  ft_isdigit.c  ft_isgraph.c  ft_islower.c  ft_isnumber.c  ft_isnumeric.c  ft_isnumeric_n.c  ft_isnumeric_str.c  ft_isprint.c  ft_isprint_str.c  ft_ispunct.c  ft_isupper.c  ft_isvar.c  ft_iswhitespace.c  ft_isword.c  ft_isxdigit.c  ft_itoa.c  ft_itoa_base.c  ft_ldtoa.c  ft_ldtoea.c  ft_lstadd.c  (+69 more)
libft/src/ft_printf/: ft_asprintf.c  ft_fatal.c  ft_pbuf.c  ft_pbuf_str.c  ft_pfloat.c  ft_phelper.c  ft_phendler.c  ft_printf.c  ft_ptool.c
pathname/: brackets.c  file2  ft_strcut.c  regex.c  test_script.sh  tests.sh
src/: env_utils.c  ft_alias_checker.c  ft_argv.c  ft_argv_exec.c  ft_argv_exec.c.orig  ft_argv_quotes.c  ft_argv_utils.c  ft_ast.c  ft_ast.c.orig  ft_ast_debug.c  ft_ast_exec.c  ft_ast_utils.c  ft_buffer.c  ft_buffer_spec.c  ft_cmd_print.c  ft_cmdlst.c  ft_cmdlst_exec.c  ft_cmdlst_exec.c.orig  ft_cmdlst_utils.c  ft_env_utils.c  ft_heredoc.c  ft_init.c  ft_init.c.orig  ft_jobs_helper.c  ft_jobs_utils.c  ft_redirection.c  ft_redirection.c.orig  ft_redirection_utils.c  ft_shell_var.c  ft_shell_var_init.c  ft_shell_var_toolz.c  ft_shell_var_utils.c  ft_shell_var_utils.c.orig  ft_tokenize.c  ft_tokenize_tools.c  ft_tokenize_utils.c  ft_tokenize_validate.c  init.c  main.c
src/builtins/: builtins.c  env_builtin.c  ft_cd.c  ft_fg.c
src/ft_builtins/: ft_bi_alias.c  ft_bi_bg.c  ft_bi_cd.c  ft_bi_cd_bckp.c  ft_bi_env.c  ft_bi_export.c  ft_bi_fg.c  ft_bi_history.c  ft_bi_history_toolz.c  ft_bi_history_utils.c  ft_bi_jobs.c  ft_bi_jobs_tools.c  ft_bi_read.c  ft_bi_read_get_last_var.c  ft_bi_read_records.c  ft_bi_un_set.c  ft_bi_un_setenv.c  ft_bi_unalias.c  ft_builtins.c
src/ft_expansions/brace/: auxiliary_funcs.c  expand_braces.c  fill_buf.c  get_range.c  get_seq.c
src/ft_expansions/field/: field_splitting.c
src/ft_expansions/pathname/: brackets.c  check_brackets.c  ft_strcut.c  regex.c
src/ft_expansions/quote/: bslash_removal.c  quote_removal.c
src/ft_expansions/substitute_cmd/: substitute_cmd.c
src/ft_expansions/tilde/: tilde.c
src/ft_expansions/tilde_var_cmd/: substitute_cmd.c  substitute_variable.c  tilde.c  tools.c
src/ft_expansions/variable/: substitute_cmd.c  substitute_variable.c
src/ft_readline/: ft_autocomplit.c  ft_check_line.c  ft_cursor.c  ft_highlight.c  ft_history.c  ft_prompt.c  ft_read.c  ft_readline.c  ft_readline.c.orig  ft_readline_action.c  ft_readline_helper.c  ft_rl_action.c  ft_rl_autocomp_cmd_and_var.c  ft_rl_autocomp_commands.c  ft_rl_autocomp_drawer.c  ft_rl_autocomp_filenames.c  ft_rl_autocomplit.c  ft_rl_check_line.c  ft_rl_cursor.c  ft_rl_exclamation.c  ft_rl_helper.c  ft_rl_highlight.c  ft_rl_history.c  ft_rl_init.c  ft_rl_line.c  ft_rl_line_edit.c  ft_rl_prompt.c  ft_rl_read.c  line.c  line_edit.c  rl_init.c
src/gsh_reader/: gsh_reader.c  gsh_reader_autocomplete.c  gsh_reader_autocomplete_drawing.c  gsh_reader_autocomplete_filenames.c  gsh_reader_cut_copy_paste.c  gsh_reader_drawing.c  gsh_reader_esc.c  gsh_reader_history.c  gsh_reader_history_exclamation.c  gsh_reader_history_toolz.c  gsh_reader_reverse_search.c  gsh_reader_sym.c  gsh_reader_tools.c
