cmake_minimum_required(VERSION 3.10)
project(gsh C)

set(CMAKE_C_STANDARD 99)

include_directories(inc)
include_directories(libft/inc)

add_executable(gsh
        inc/ft_expansions.h
        inc/ft_readline.h
        inc/ft_sh.h
        libft/inc/ft_printf.h
        libft/inc/libft.h
        libft/src/ft_printf/ft_pbuf.c
        libft/src/ft_printf/ft_pfloat.c
        libft/src/ft_printf/ft_phelper.c
        libft/src/ft_printf/ft_phendler.c
        libft/src/ft_printf/ft_printf.c
        libft/src/ft_absolute.c
        libft/src/ft_arrstr.c
        libft/src/ft_atoi.c
        libft/src/ft_atoi_base.c
        libft/src/ft_atol.c
        libft/src/ft_atol_base.c
        libft/src/ft_bzero.c
        libft/src/ft_count_digits.c
        libft/src/ft_dtoa.c
        libft/src/ft_dtoea.c
        libft/src/ft_free_arr.c
        libft/src/ft_is_blank.c
        libft/src/ft_isalnum.c
        libft/src/ft_isalnum_str.c
        libft/src/ft_isalpha.c
        libft/src/ft_isalpha_str.c
        libft/src/ft_isascii.c
        libft/src/ft_isascii_str.c
        libft/src/ft_isblank.c
        libft/src/ft_iscntrl.c
        libft/src/ft_isdigit.c
        libft/src/ft_isgraph.c
        libft/src/ft_islower.c
        libft/src/ft_isnumber.c
        libft/src/ft_isnumeric.c
        libft/src/ft_isnumeric_n.c
        libft/src/ft_isprint.c
        libft/src/ft_isprint_str.c
        libft/src/ft_ispunct.c
        libft/src/ft_isupper.c
        libft/src/ft_iswhitespace.c
        libft/src/ft_isword.c
        libft/src/ft_isxdigit.c
        libft/src/ft_itoa.c
        libft/src/ft_itoa_base.c
        libft/src/ft_ldtoa.c
        libft/src/ft_ldtoea.c
        libft/src/ft_lstadd.c
        libft/src/ft_lstadd_end.c
        libft/src/ft_lstadd_list.c
        libft/src/ft_lstdel.c
        libft/src/ft_lstdelone.c
        libft/src/ft_lstfree.c
        libft/src/ft_lstinsert.c
        libft/src/ft_lstiter.c
        libft/src/ft_lstmap.c
        libft/src/ft_lstnew.c
        libft/src/ft_lstprint.c
        libft/src/ft_lstpush_back.c
        libft/src/ft_lstpush_front.c
        libft/src/ft_lstsize.c
        libft/src/ft_lstsort.c
        libft/src/ft_lstsplit.c
        libft/src/ft_ltoa.c
        libft/src/ft_memalloc.c
        libft/src/ft_memccpy.c
        libft/src/ft_memchr.c
        libft/src/ft_memcmp.c
        libft/src/ft_memcpy.c
        libft/src/ft_memdel.c
        libft/src/ft_memmove.c
        libft/src/ft_memset.c
        libft/src/ft_putchar.c
        libft/src/ft_putchar_fd.c
        libft/src/ft_putendl.c
        libft/src/ft_putendl_fd.c
        libft/src/ft_putnbr.c
        libft/src/ft_putnbr_fd.c
        libft/src/ft_putstr.c
        libft/src/ft_putstr_fd.c
        libft/src/ft_realloc.c
        libft/src/ft_sort_params.c
        libft/src/ft_strarr_free.c
        libft/src/ft_strcat.c
        libft/src/ft_strchr.c
        libft/src/ft_strclr.c
        libft/src/ft_strcmp.c
        libft/src/ft_strcpy.c
        libft/src/ft_strdel.c
        libft/src/ft_strdup.c
        libft/src/ft_strdup_arr.c
        libft/src/ft_strequ.c
        libft/src/ft_strextend.c
        libft/src/ft_strhalfextend.c
        libft/src/ft_striter.c
        libft/src/ft_striteri.c
        libft/src/ft_strjoin.c
        libft/src/ft_strlcat.c
        libft/src/ft_strlen.c
        libft/src/ft_strlen_c.c
        libft/src/ft_strmap.c
        libft/src/ft_strmapi.c
        libft/src/ft_strncat.c
        libft/src/ft_strnchr.c
        libft/src/ft_strncmp.c
        libft/src/ft_strncpy.c
        libft/src/ft_strnequ.c
        libft/src/ft_strnew.c
        libft/src/ft_strnstr.c
        libft/src/ft_strrchr.c
        libft/src/ft_strsplit.c
        libft/src/ft_strstr.c
        libft/src/ft_strsub.c
        libft/src/ft_strtrim.c
        libft/src/ft_strulen.c
        libft/src/ft_tolower.c
        libft/src/ft_toupper.c
        libft/src/ft_ultoa_base.c
        libft/src/ft_wcharlen.c
        libft/src/get_next_line.c
        src/ft_builtins/ft_bi_bg.c
        src/ft_builtins/ft_bi_cd.c
        src/ft_builtins/ft_bi_env.c
        src/ft_builtins/ft_bi_export.c
        src/ft_builtins/ft_bi_fg.c
        src/ft_builtins/ft_bi_history.c
        src/ft_builtins/ft_bi_jobs.c
        src/ft_builtins/ft_bi_jobs_tools.c
        src/ft_builtins/ft_bi_un_set.c
        src/ft_builtins/ft_bi_un_setenv.c
        src/ft_builtins/ft_builtins.c
        src/ft_expansions/brace/auxiliary_funcs.c
        src/ft_expansions/brace/expand_braces.c
        src/ft_expansions/brace/fill_buf.c
        src/ft_expansions/brace/get_range.c
        src/ft_expansions/brace/get_seq.c
        src/ft_expansions/pathname/brackets.c
        src/ft_expansions/pathname/check_brackets.c
        src/ft_expansions/pathname/ft_strcut.c
        src/ft_expansions/pathname/regex.c
        src/ft_expansions/tilde/tilde.c
        src/ft_readline/ft_readline.c
        src/ft_readline/ft_rl_action.c
        src/ft_readline/ft_rl_autocomp_cmd_and_var.c
        src/ft_readline/ft_rl_autocomp_drawer.c
        src/ft_readline/ft_rl_autocomp_filenames.c
        src/ft_readline/ft_rl_autocomplit.c
        src/ft_readline/ft_rl_check_line.c
        src/ft_readline/ft_rl_cursor.c
        src/ft_readline/ft_rl_exclamation.c
        src/ft_readline/ft_rl_helper.c
        src/ft_readline/ft_rl_highlight.c
        src/ft_readline/ft_rl_history.c
        src/ft_readline/ft_rl_init.c
        src/ft_readline/ft_rl_line.c
        src/ft_readline/ft_rl_line_edit.c
        src/ft_readline/ft_rl_prompt.c
        src/ft_readline/ft_rl_read.c
        src/ft_argv.c
        src/ft_argv_exec.c
        src/ft_argv_quotes.c
        src/ft_argv_utils.c
        src/ft_ast.c
        src/ft_ast_debug.c
        src/ft_ast_exec.c
        src/ft_ast_utils.c
        src/ft_buffer.c
        src/ft_cmd_print.c
        src/ft_cmdlst.c
        src/ft_cmdlst_exec.c
        src/ft_cmdlst_utils.c
        src/ft_heredoc.c
        src/ft_init.c
        src/ft_jobs_utils.c
        src/ft_redirection.c
        src/ft_redirection_utils.c
        src/ft_shell_var.c
        src/ft_shell_var_toolz.c
        src/ft_shell_var_utils.c
        src/ft_tokenize.c
        src/ft_tokenize_tools.c
        src/ft_tokenize_utils.c
#        src/main.c
        src/ft_expansions/variable/substitute_variable.c
        src/ft_expansions/quote/quote_removal.c)
